Proyecto para entrega final

--- a/html/Contacto.html
+++ b/html/Contacto.html
@@ -9,6 +9,15 @@
      <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
      <!--Fin link bootstrap-->
      <link rel="stylesheet" href="../estilos/estilos.css">
+
+    <!--Etiquetas Meta-->
+    <meta name="author" content="Luciano">
+
+
+    <meta name="description" content="Contactá a Motores Urbanos para consultas sobre vehículos, financiación o turnos. Estamos para ayudarte por teléfono, mail o WhatsApp.">
+    
+    <meta name="keywords" content="contacto, Motores Urbanos, vehículos, financiación, consultas, teléfono, email, WhatsApp">
+
     <title>Contacto</title>
 </head>
 <body>
