--- a/html/Blog.html
+++ b/html/Blog.html
@@ -7,6 +7,14 @@
      <!-- Link Bootstrap-->
      <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
     <link rel="stylesheet" href="../estilos/estilos.css">
+
+    <!--Etiquetas Meta-->
+     <meta name="author" content="Luciano">
+     
+     <meta name="keywords" content="blog automotriz, consejos de autos, mantenimiento de vehículos, comprar auto nuevo, auto usado, tecnología automotriz, tendencias en autos, Motores Urbanos">
+      
+     <meta name="description" content="Leé noticias, consejos y novedades sobre autos. En el blog de Motores Urbanos te ayudamos a tomar decisiones informadas antes de comprar, vender o mantener tu vehículo.">
+
 </head>
 <body>
     <header>
