--- a/html/Vehiculos.html
+++ b/html/Vehiculos.html
@@ -6,6 +6,14 @@
      <!-- Link Bootstrap-->
      <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
     <link rel="stylesheet" href="../estilos/estilos.css">
+
+    <!--Etiquetas Meta-->
+    <meta name="author" content="Luciano">
+
+    <meta name="description" content="Descubrí nuestra selección de autos usados y nuevos en excelente estado. Encontrá tu próximo vehículo en Motores Urbanos. ¡Consultá financiación!">
+  
+    <meta name="keywords" content="autos en venta, autos usados, autos nuevos, comprar auto, concesionaria de autos, vehículos disponibles, Motores Urbanos, catálogo de autos, financiación de autos">
+    
     <title>Vehiculos</title>
 </head>
 <body>
