--- a/index.html
+++ b/index.html
@@ -8,8 +8,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Link Bootstrap-->
      <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
-     <!--Fin link bootstrap-->
+    <!--Fin link bootstrap-->
      <link rel="stylesheet" href="./estilos/estilos.css">
+
+     <!--Etiquetas Meta-->
+     <meta name="author" content="Luciano">
+     
+     <meta name="keywords" content="compra y venta de vehículos, inspección a domicilio, opciones de pago flexibles, vehículos usados, financiación de autos, consignación de vehículos">
+      
+     <meta name="description" content="Motores Urbanos es tu aliado para la compra y venta de vehículos. Te ofrecemos un servicio ágil, inspección a domicilio y opciones de pago flexibles.">
+
     <title>Motores Urbanos</title>       
 </head>
 <body>
@@ -46,22 +54,22 @@
     </header>
    
   <main>
-    <h2>Renova tu forma de moverte</h2>
+    <h1>Renova tu forma de moverte</h1>
     <div class="contenedor">
   
         <div class="texto">
           <section class="seccion_inicio">
-            <h3>Te lo hacemos fácil</h3>
+            <h2>Te lo hacemos fácil</h2>
             <hr class="linea">
             <p>En simples pasos cotizamos tu auto al instante. <strong>¡No pierdas tiempo!</strong></p>
           </section>
           <section class="seccion_inicio">
-            <h3>Vamos a donde estés</h3>
+            <h2>Vamos a donde estés</h2>
             <hr class="linea">
             <p>A la hora de la <strong>inspección a domicilio</strong> vos definís lugar y hora, nosotros nos ocupamos.</p>
           </section>
           <section class="seccion_inicio">
-            <h3>Elegí la opción de pago que prefieras</h3>
+            <h2>Elegí la opción de pago que prefieras</h2>
             <hr class="linea">
             <p>Podes optar entre 3 tipos de ofertas: pago al instante, dejar tu auto en parte de pago por uno nuevo o dejarlo en consignación.</p>
           </section>
